# derive-more-more-rs

./: Cargo.toml
src/: extend.rs  from_iterator.rs  lib.rs  prelude.rs
src/common/: attr.rs  error.rs  helpers.rs  macros.rs  mod.rs
tests/: extend.rs  extend_option.rs  from_iterator.rs  from_iterator_option.rs
tests/ui/extend/: extend_attr_enum.rs  extend_attr_enum.stderr  extend_attr_field_field.rs  extend_attr_field_field.stderr  extend_attr_struct_field.rs  extend_attr_struct_field.stderr  extend_multifield_attr_struct.rs  extend_multifield_attr_struct.stderr  extend_no_attr.rs  extend_no_attr.stderr  extend_zero_field.rs  extend_zero_field.stderr
tests/ui/from_iterator/: from_iterator_attr_enum.rs  from_iterator_attr_enum.stderr  from_iterator_attr_field_field.rs  from_iterator_attr_field_field.stderr  from_iterator_attr_struct_field.rs  from_iterator_attr_struct_field.stderr  from_iterator_multifield_attr_struct.rs  from_iterator_multifield_attr_struct.stderr  from_iterator_no_attr.rs  from_iterator_no_attr.stderr  from_iterator_zero_field.rs  from_iterator_zero_field.stderr
