[package]
name = "derive-more-more"
version = "0.1.0"
authors = ["Greg \"GothAck\" Miell <greg@gothack.ninja>"]
license = "MIT"
description = "Moar derives"
repository = "https://github.com/gothack/derive-more-more-rs"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
derive_more = "0.99"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
paste = "1.0"
